--- a/ubuntu_build_tina/Dockerfile
+++ b/ubuntu_build_tina/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu20.04:basic
+FROM plainji/ubuntu20.04:basic
 
 RUN apt install -y build-essential subversion git-core libncurses5-dev zlib1g-dev gawk flex quilt libssl-dev xsltproc libxml-parser-perl mercurial bzr ecj cvs unzip lib32z1 lib32z1-dev lib32stdc++6 libstdc++6 libmpc-dev libgmp-dev
 
